# LLM-Cost-and-Token-Efficiency-Analysis

./: .env.example  .gitignore  LICENSE  README.md  llm_analyzer.ipynb  pyproject.toml  requirements.txt
outputs/: llm_benchmark_results.csv  llm_benchmark_summary.csv
src/llm_analyzer/: __init__.py
