[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-analyzer"
version = "0.1.0"
description = "LLM benchmarking: token usage, cost, latency, and accuracy"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "jupyterlab>=4.1.0",
    "ipykernel>=6.29.0",
]
